# todo-rs

./: .gitignore  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  flake.nix
.github/workflows/: build.yml
crates/todo-lib/: Cargo.toml
crates/todo-lib/src/: lib.rs  todo.rs  utils.rs
src/: app.rs  command.rs  main.rs
