[package]
name = "todo-lib"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
once_cell = "1.18.0"
owo-colors = "3.5.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
